2008-05-11  Andres G. Aragoneses <aaragoneses@novell.com> 

	* Test.Rules.Naming.mdp: Fix references.

2008-04-26  Jb Evain  <jbevain@novell.com>

	* UseCorrectCasingTest.cs: add tests for namespace casing
	checks.

2008-03-19  Sebastien Pouliot  <sebastien@ximian.com>

	* UseCorrectCasingTest.cs: Fix test case for compiler-generated code
	(anonymous methods) and CSC.
	* UseCorrectSuffixTest.cs: Add test cases for generics.

2008-03-15  Sebastien Pouliot  <sebastien@ximian.com>

	* DetectNonAlphaNumericsInTypeNamesTest.cs: Add test case for
	COM interop.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* DetectNonAlphaNumericsInTypeNamesTest.cs
	* DoNotPrefixValuesWithEnumNameTest.cs
	* DoNotUseReservedInEnumValueNamesTest.cs
	* EnumNotEndsWithEnumOrFlagsSuffixTest.cs
	* ParameterNamesShouldMatchOverridenMethodTest.cs
	* UseCorrectCasingTest.cs
	* UseCorrectPrefixTest.cs
	* UseCorrectSuffixTest.cs
	* UsePluralNameInEnumFlagsTest.cs
	* UsePreferredTermsTest.cs
	* UseSingularNameInEnumsUnlessAreFlagsTest.cs:
		Update unit tests wrt framework changes.

2008-01-14  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotPrefixValuesWithEnumNameTest.cs: New. Unit tests from Andreas
	Noever
	* DoNotUseReservedInEnumValueNamesTest.cs: : New. Unit tests from
	Andreas	Noever
	* ParameterNamesShouldMatchOverridenMethodTest.cs: : New. Unit 
	tests from Andreas Noever
	* Test.Rules.Naming.mdp: Update MonoDevelop project file.

2007-12-26  Sebastien Pouliot  <sebastien@ximian.com>

	* AttributeEndsWithAttributeSuffixTest.cs: Deleted. The new
	UseCorrectSuffixTest is a superset of the rule/tests.
	* Test.Rules.Naming.mdp: Update MonoDevelop project file.
	* UseCorrectPrefixTest.cs: New. Test cases from Daniel Abramov.
	* UseCorrectCasingTest.cs: New. Test cases from Daniel Abramov.
	* UseCorrectSuffixTest.cs: New. Test cases from Daniel Abramov.
	* UsePreferredTermsTest.cs: New. Test cases from Daniel Abramov.

2007-10-08  Sebastien Pouliot  <sebastien@ximian.com>
